WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103460
[chromium] Gut WebRenderingStats since we no longer use its member variables.
https://bugs.webkit.org/show_bug.cgi?id=103460
Summary
[chromium] Gut WebRenderingStats since we no longer use its member variables.
Glenn Hartmann
Reported
2012-11-27 15:57:07 PST
Gut WebRenderingStats since we no longer use its member variables.
Attachments
Patch
(3.61 KB, patch)
2012-11-27 15:59 PST
,
Glenn Hartmann
no flags
Details
Formatted Diff
Diff
Patch
(3.56 KB, patch)
2012-11-28 09:51 PST
,
Glenn Hartmann
no flags
Details
Formatted Diff
Diff
Patch
(3.56 KB, patch)
2012-11-29 07:29 PST
,
Glenn Hartmann
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Glenn Hartmann
Comment 1
2012-11-27 15:59:13 PST
Created
attachment 176352
[details]
Patch
Glenn Hartmann
Comment 2
2012-11-27 16:01:22 PST
jamesr: please take a look - should be the last time we need to modify WebRenderingStats.
WebKit Review Bot
Comment 3
2012-11-27 16:05:56 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Darin Fisher (:fishd, Google)
Comment 4
2012-11-27 16:08:36 PST
Comment on
attachment 176352
[details]
Patch R+, will you be removing the struct as well?
Glenn Hartmann
Comment 5
2012-11-27 16:12:03 PST
(In reply to
comment #4
)
> (From update of
attachment 176352
[details]
) > R+, will you be removing the struct as well?
No, unfortunately we still need to empty struct for inheritance and downcasting on the chromium side.
WebKit Review Bot
Comment 6
2012-11-27 16:21:51 PST
Comment on
attachment 176352
[details]
Patch Rejecting
attachment 176352
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: bkit/compositor_bindings/web_layer_tree_view_impl.cc:187: error: 'struct WebKit::WebRenderingStats' has no member named 'numImplThreadScrolls' Source/WebKit/chromium/webkit/compositor_bindings/web_layer_tree_view_impl.cc:188: error: 'struct WebKit::WebRenderingStats' has no member named 'numMainThreadScrolls' make: *** [out/Release/obj.target/webkit_compositor_bindings/Source/WebKit/chromium/webkit/compositor_bindings/web_layer_tree_view_impl.o] Error 1 make: *** Waiting for unfinished jobs.... Full output:
http://queues.webkit.org/results/15010304
James Robinson
Comment 7
2012-11-27 16:29:13 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (From update of
attachment 176352
[details]
[details]) > > R+, will you be removing the struct as well? > > No, unfortunately we still need to empty struct for inheritance and downcasting on the chromium side.
We'll be able to completely remove it when
https://code.google.com/p/chromium/issues/detail?id=156175
is fixed
Peter Beverloo (cr-android ews)
Comment 8
2012-11-27 17:32:04 PST
Comment on
attachment 176352
[details]
Patch
Attachment 176352
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/15013268
WebKit Review Bot
Comment 9
2012-11-27 18:57:48 PST
Comment on
attachment 176352
[details]
Patch
Attachment 176352
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15023256
Glenn Hartmann
Comment 10
2012-11-28 09:51:05 PST
Created
attachment 176502
[details]
Patch
Glenn Hartmann
Comment 11
2012-11-28 09:52:33 PST
Re-uploading patch to rerun bots now that chromium DEPS should be up-to-date.
WebKit Review Bot
Comment 12
2012-11-28 09:55:24 PST
Comment on
attachment 176502
[details]
Patch
Attachment 176502
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15027463
Glenn Hartmann
Comment 13
2012-11-29 07:29:44 PST
Created
attachment 176733
[details]
Patch
Glenn Hartmann
Comment 14
2012-11-29 07:31:05 PST
(In reply to
comment #11
)
> Re-uploading patch to rerun bots now that chromium DEPS should be up-to-date.
Even though the DEPS had been updated, looks like they hadn't propagated to the cr-linux bot. Trying again...
WebKit Review Bot
Comment 15
2012-12-04 08:52:55 PST
Comment on
attachment 176733
[details]
Patch Clearing flags on attachment: 176733 Committed
r136511
: <
http://trac.webkit.org/changeset/136511
>
WebKit Review Bot
Comment 16
2012-12-04 08:53:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug