Gut WebRenderingStats since we no longer use its member variables. https://bugs.webkit.org/show_bug.cgi?id=103460

Patch by Glenn Hartmann <hartmanng@chromium.org> on 2012-12-04
Reviewed by Darin Fisher.

This was used as an intermediate location to move stats from
chromium's RenderStats. The chromium code has been updated to
remove this dependency (see https://codereview.chromium.org/11364221/).

* chromium/public/WebRenderingStats.h:
(WebKit::WebRenderingStats::WebRenderingStats):

Canonical link: https://commits.webkit.org/122099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136511 268f45cc-cd09-0410-ab3c-d52691b4dbfc