Source/Platform/chromium/public/WebRenderingStats.h
@@ -29,59 +29,8 @@
 namespace WebKit {
 
 struct WebRenderingStats {
-    int numAnimationFrames;
-    int numFramesSentToScreen;
-    int droppedFrameCount;
-    double totalPaintTimeInSeconds;
-    double totalRasterizeTimeInSeconds;
-    double totalCommitTimeInSeconds;
-    size_t totalCommitCount;
-    size_t totalPixelsPainted;
-    size_t totalPixelsRasterized;
-    size_t numImplThreadScrolls;
-    size_t numMainThreadScrolls;
-
     WebRenderingStats()
-        : numAnimationFrames(0)
-        , numFramesSentToScreen(0)
-        , droppedFrameCount(0)
-        , totalPaintTimeInSeconds(0)
-        , totalRasterizeTimeInSeconds(0)
-        , totalCommitTimeInSeconds(0)
-        , totalCommitCount(0)
-        , totalPixelsPainted(0)
-        , totalPixelsRasterized(0)
-        , numImplThreadScrolls(0)
-        , numMainThreadScrolls(0)
     {
-    }
-
-    // In conjunction with enumerateFields, this allows the embedder to
-    // enumerate the values in this structure without
-    // having to embed references to its specific member variables. This
-    // simplifies the addition of new fields to this type.
-    class Enumerator {
-    public:
-        virtual void addInt(const char* name, int value) = 0;
-        virtual void addDouble(const char* name, double value) = 0;
-    protected:
-        virtual ~Enumerator() { }
-    };
-
-    // Outputs the fields in this structure to the provided enumerator.
-    void enumerateFields(Enumerator* enumerator) const
-    {
-        enumerator->addInt("numAnimationFrames", numAnimationFrames);
-        enumerator->addInt("numFramesSentToScreen", numFramesSentToScreen);
-        enumerator->addInt("droppedFrameCount", droppedFrameCount);
-        enumerator->addDouble("totalPaintTimeInSeconds", totalPaintTimeInSeconds);
-        enumerator->addDouble("totalRasterizeTimeInSeconds", totalRasterizeTimeInSeconds);
-        enumerator->addDouble("totalCommitTimeInSeconds", totalCommitTimeInSeconds);
-        enumerator->addInt("totalCommitCount", totalCommitCount);
-        enumerator->addInt("totalPixelsPainted", totalPixelsPainted);
-        enumerator->addInt("totalPixelsRasterized", totalPixelsRasterized);
-        enumerator->addInt("numImplThreadScrolls", numImplThreadScrolls);
-        enumerator->addInt("numMainThreadScrolls", numMainThreadScrolls);
     }
 };
 
